[package]
name = "kaomoji_scraper"
version = "0.1.0"
authors = ["riesha <seleneia@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
tokio = { version = "1", features = ["full"] }
select = "0.5.0"